# Redscript

./: .gitignore  CMakeLists.txt  build.bat  entry.cpp  getopt.c  make.bat  make.sh  out.rbc  rs.config  rscript
examples/: errors.rsc  fifs.rsc  for.rsc  generics.rsc  lists.rsc  llambda.rsc  type_errors.rsc  types.rsc
examples/docs/: objects.md
rslib/: lang.rsc
src/: bst.cpp  bst.hpp  config.cpp  constants.hpp  error.cpp  error.hpp  errors.hpp  globals.hpp  inb.cpp  inb.hpp  lang.cpp  lang.hpp  lexer.cpp  logger.hpp  mc.cpp  mc.hpp  mchelpers.hpp  parser.cpp  parser.hpp  rbc.cpp  rbc.hpp  rbc_types.hpp  rs_types.hpp  token.hpp  type_info.hpp  types.hpp  util.hpp  var_access.hpp
src/types/: project_fragment.hpp  rbc_constant.hpp  rbc_register.hpp  rbc_types.hpp  rbc_value.hpp  rs_compilation_info.hpp  rs_expression.cpp  rs_expression.hpp  rs_list.hpp  rs_object.hpp  rs_var_access_path.cpp  rs_var_access_path.hpp  rs_variable.hpp
